docs: TreeMap/TreeSet chapter (T-203), close remaining Phase 1 audit defects
Continued the gap-closing pass into the "Also open" list beneath the
errata table -- four real, tracked Phase 1 defects separate from the
numbered register.

Inverted Set hierarchy diagram and NavigableSet miscategorized as a
peer implementation: both trace to T-203 (TreeMap/TreeSet & Red-Black
mechanics), a real, tracked, Core-tier topic register entry with no
canonical chapter written yet. Closed both by writing that chapter for
real. Central evidence: a real, reflective height measurement showing
TreeMap's actual Red-Black tree stays at height 31 under 100,000
adversarial (ascending) insertions, while a naive BST fed the identical
sequence degenerates to height 100,000 -- a straight line. A direct
reflective proof (TreeSet.class.getInterfaces()) shows NavigableSet is
TreeSet's own supertype, not a sibling class, closing both defects with
one piece of runnable evidence.

CMS listed without noting removal in JDK 14: genuinely still a gap --
the GC chapter mentioned only "CMS is deprecated," no removal note.
Fixed with the real JEP history (deprecated JDK 9 / JEP 291, removed
JDK 14 / JEP 363) plus a real captured failure on OpenJDK 21.0.12:
java -XX:+UseConcMarkSweepGC -version genuinely fails with
"Unrecognized VM option" -- a hard startup error, not a silent
fallback.

Correlated-hash Bloom filter: confirmed genuinely uncovered anywhere in
this repo, left open honestly rather than forced closed for one
footnote.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>